--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
       <li class="nav-item active ">
-      <a class="nav-link active btn btn-primary" href="home.html">Home <span class="sronly"></span></a>
+      <a class="nav-link active btn btn-primary" href="index.html">Home <span class="sronly"></span></a>
       </li>
       <li class="nav-item">
       <a class="nav-link text-white" href="aboutus.html">AboutUs</a>
