--- a/aboutus.html
+++ b/aboutus.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
         <li class="nav-item ">
-        <a class="nav-link text-white" href="home.html">Home <span class="sronly"></span></a>
+        <a class="nav-link text-white" href="index.html">Home <span class="sronly"></span></a>
         </li>
         <li class="nav-item">
         <a class="nav-link active btn btn-primary" href="aboutus.html">AboutUs</a>
